# minstd_rand

./: .gitignore  CMakeLists.txt  README.md  main.cpp  minstd_rand.hpp  vec_lib.hpp
cmake/: defaults.cmake
